--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,7 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
